Updated code for version 1.1.0