@@ -4,7 +4,7 @@ import org.apache.commons.collections4.BidiMap;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.SetUtils;
 import org.apache.commons.collections4.bidimap.DualHashBidiMap;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.util.*;
 
@@ -21,11 +21,11 @@ public class Collections {
 
     @Test
     public void utils() {
-        Collection<Integer> ints = Arrays.asList(1, 2, 3);
+        var ints = List.of(1, 2, 3);
         assert 3 == CollectionUtils.size(ints.iterator());
 
-        Set<Integer> a = new HashSet<>(Arrays.asList(1,2,3,4));
-        Set<Integer> b = new HashSet<>(Arrays.asList(1,2,4));
+        var a = Set.of(1,2,3,4);
+        var b = Set.of(1,2,4);
         SetUtils.SetView<Integer> result = SetUtils.difference(a, b);
 
         assert 1 == result.size();
